fixed issues of book title not showing due to props issue

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,19 @@
   color: #61dafb;
 }
 
+.answer {
+  background-color: #F0F7fd;
+  border-color: #D0e3f0;
+  margin-bottom: 20px;
+  padding: 15px 30px 15px 15px;
+  border-left: 5px solid #D0e3f0;
+  cursor: pointer;
+}
+
+.answer:hover {
+  background-color:  #D0e3f0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
